--- a/css1.css
+++ b/css1.css
@@ -4,21 +4,22 @@
 .body {
     font-family: Arial, Helvetica, sans-serif;
   }
-.hero-image{
-   background-image: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), url("kenreid.jpg");
-   height:30%;
-   background-position: center;
-   background-repeat: no-repeat;
-   background-size: cover;
-   position: relative;
+  .hero-image{
+    background-image: url("kenreid.jpg");
+    height:40%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
   }
- .hero-text {
+
+  .hero-text {
     text-align: center;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: white;
+    color: #E0FFFF;
   }
 
 /*Chris - Set background colour*/
