--- a/css1.css
+++ b/css1.css
@@ -5,7 +5,7 @@
     font-family: Arial, Helvetica, sans-serif;
   }
   .hero-image{
-    background-image: url("kenreid.jpg");
+    background-image: url("conservationarea.jpg");
     height:40%;
     background-position: center;
     background-repeat: no-repeat;
