--- a/css1.css
+++ b/css1.css
@@ -213,6 +213,7 @@ Retrieved from CodePen: https://codepen.io/zFunx/pen/XMKaBj*/
 .header {
   text-align: center;
   padding: 32px;
+color: #E0FFFF;
 }
 
 .row {
