--- a/css1.css
+++ b/css1.css
@@ -4,7 +4,10 @@
 .body {
     font-family: Arial, Helvetica, sans-serif;
   }
-  .hero-image{
+  /***********************************Header Main Page*************************/
+  /*Written by Malena*/
+
+  .homepage-hero-image{
     background-image: url("conservationarea.jpg");
     height:40%;
     background-position: center;
@@ -19,12 +22,12 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+  } 
+  h1.homepage{
     color: #E0FFFF;
+    font-size: 50px; 
   }
-  h1.heroimage{
-    color: #E0FFFF; 
-  }
-
+ 
 /*Chris - Set background colour*/
 body{
   background-color: rgb(224, 253, 242)
