--- a/css1.css
+++ b/css1.css
@@ -23,9 +23,20 @@
     left: 50%;
     transform: translate(-50%, -50%);
   } 
-  h1.homepage{
+  h1.heroimage{
     color: #E0FFFF;
     font-size: 50px; 
+  }
+    /***********************************Header Food Page*************************/
+  /*Written by Malena*/
+
+  .foodpage-hero-image{
+    background-image: url("foodpageheader.jpg");
+    height:40%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
   }
  
 /*Chris - Set background colour*/
