--- a/css1.css
+++ b/css1.css
@@ -4,7 +4,7 @@
 .body {
     font-family: Arial, Helvetica, sans-serif;
   }
-  /***********************************Header Main Page*************************/
+  /***********************************Headers for all pages*************************/
   /*Written by Malena*/
 
   .homepage-hero-image{
@@ -15,7 +15,14 @@
     background-size: cover;
     position: relative;
   }
-
+  .foodpage-hero-image{
+    background-image: url("foodpageheader.jpg");
+    height:40%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+  }
   .hero-text {
     text-align: center;
     position: absolute;
@@ -25,19 +32,7 @@
   } 
   h1.heroimage{
     color: #E0FFFF;
-    font-size: 50px; 
-  }
-    /***********************************Header Food Page*************************/
-  /*Written by Malena*/
-
-  .foodpage-hero-image{
-    background-image: url("foodpageheader.jpg");
-    height:40%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-  }
+    font-size: 50px;
  
 /*Chris - Set background colour*/
 body{
