--- a/css1.css
+++ b/css1.css
@@ -267,6 +267,21 @@ color: #E0FFFF;
   display: table;
   clear: both; 
 }  
+
+  .G1Overlay{
+  position: absolute; 
+  bottom: 0; 
+  background: rgb(0, 0, 0);
+  background: rgba(0, 0, 0, 0.5); /* Black see-through */
+  color: #f1f1f1; 
+  width: 100%;
+  transition: .5s ease;
+  opacity:0;
+  color: white;
+  font-size: 20px;
+  padding: 20px;
+  text-align: center;
+}
 /*Image gallery taken and edited based of w3schools How To 
   https://www.w3schools.com/howto/howto_js_image_grid.asp*/
 
