--- a/css1.css
+++ b/css1.css
@@ -4,7 +4,7 @@
 .body {
     font-family: Arial, Helvetica, sans-serif;
   }
-  /***********************************Headers for all pages*************************/
+    /***********************************Headers for all pages*************************/
   /*Written by Malena*/
 
   .homepage-hero-image{
@@ -15,6 +15,17 @@
     background-size: cover;
     position: relative;
   }
+  .hero-text {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  } 
+  h1.heroimage{
+    color: #E0FFFF;
+    font-size: 50px;
+  }
   .foodpage-hero-image{
     background-image: url("foodpageheader.jpg");
     height:40%;
@@ -22,6 +33,17 @@
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
+  }
+  .hero-text {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  } 
+  h1.heroimage{
+    color: #E0FFFF;
+    font-size: 50px;
   }
   .imagegallery-hero-image{
     background-image: url("imagegalleryheader.jpg");
@@ -42,7 +64,6 @@
     color: #E0FFFF;
     font-size: 50px;
   }
-
  
 /*Chris - Set background colour*/
 body{
