--- a/css1.css
+++ b/css1.css
@@ -9,11 +9,18 @@
 
   .homepage-hero-image{
     background-image: url("conservationarea.jpg");
-    height:40%;
-    background-position: center;
-    background-repeat: no-repeat;
     background-size: cover;
-    position: relative;
+    height: 60vh;
+    text-align: center;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
   .hero-text {
     text-align: center;
