--- a/css1.css
+++ b/css1.css
@@ -4,7 +4,7 @@
 .body {
     font-family: Arial, Helvetica, sans-serif;
   }
-    /***********************************Headers for all pages*************************/
+  /***********************************Headers for all pages*************************/
   /*Written by Malena*/
 
   .homepage-hero-image{
@@ -22,24 +22,35 @@
         -ms-flex-pack: center;
             justify-content: center;
   }
-  .hero-text {
+  .foodpage-hero-image{
+    background-image: url("foodpageheader.jpg");
+    background-size: cover;
+    height: 60vh;
     text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  } 
-  h1.heroimage{
-    color: #E0FFFF;
-    font-size: 50px;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
   .imagegallery-hero-image{
     background-image: url("imagegalleryheader.jpg");
-    height:40%;
-    background-position: center;
-    background-repeat: no-repeat;
     background-size: cover;
-    position: relative;
+    height: 60vh;
+    text-align: center;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
   .hero-text {
     text-align: center;
@@ -316,22 +327,6 @@ p{
 
 /************************************************** Food Page CSS *******************************************************/
 /* Written by Mara*/
-.foodpage-hero-image{
-   background-image: url("foodpageheader.jpg");
-   height:40%;
-   background-position: center;
-   background-repeat: no-repeat;
-   background-size: cover;
-   position: relative;
- }
- .hero-text {
-   text-align: center;
-   position: absolute;
-   top: 50%;
-   left: 50%;
-   transform: translate(-50%, -50%);
- } 
-
 h1.food {
   text-align: center;
   padding-left: 100px;
