--- a/css1.css
+++ b/css1.css
@@ -10,7 +10,7 @@
   .homepage-hero-image{
     background-image: url("conservationarea.jpg");
     background-size: cover;
-    height: 60vh;
+    height: 50%;
     text-align: center;
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -25,7 +25,7 @@
   .foodpage-hero-image{
     background-image: url("foodpageheader.jpg");
     background-size: cover;
-    height: 60vh;
+    height: 50%;
     text-align: center;
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -40,7 +40,7 @@
   .imagegallery-hero-image{
     background-image: url("imagegalleryheader.jpg");
     background-size: cover;
-    height: 60vh;
+    height: 50%;
     text-align: center;
     display: -webkit-flex;
     display: -ms-flexbox;
