--- a/css1.css
+++ b/css1.css
@@ -51,6 +51,7 @@
     -webkit-justify-content: center;
         -ms-flex-pack: center;
             justify-content: center;
+    position: relative;
   }
   .hero-text {
     text-align: center;
