--- a/css1.css
+++ b/css1.css
@@ -39,19 +39,11 @@
   }
   .imagegallery-hero-image{
     background-image: url("imagegalleryheader.jpg");
-    background-size: cover;
-    height: 50%;
-    text-align: center;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-align-items: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-justify-content: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    position: relative;
+    height: 60%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
   }
   .hero-text {
     text-align: center;
