--- a/css1.css
+++ b/css1.css
@@ -47,7 +47,7 @@
   }
   .hero-text {
     text-align: center;
-    position: absolute;
+    position: relative;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
