--- a/css1.css
+++ b/css1.css
@@ -9,11 +9,10 @@
 
 .homepage{
     width: 100%;
-    max-width: 1200px;
-    height: 500px;
+    max-width: 100%;
+    height: 50%;
     text-align: center;
     margin: 0 auto;
-    background: #392f28;
     position: relative; 
   }
   .homepage h1{
