--- a/css1.css
+++ b/css1.css
@@ -8,8 +8,7 @@
   /*Written by Malena*/
 
 .homepage{
-    width: 100%;
-    max-width: 100%;
+    width: cover;
     height: 50%;
     text-align: center;
     margin: 0 auto;
