--- a/css1.css
+++ b/css1.css
@@ -9,6 +9,8 @@
 
 .homepage{
     width: cover;
+    max-width: cover;
+    height: 40%;
     text-align: center;
     margin: 0 auto;
     position: relative; 
