--- a/css1.css
+++ b/css1.css
@@ -8,7 +8,7 @@
   /*Written by Malena*/
 
 .homepage{
-    width: cover;
+    width: 100%;
     height: 40%;
     text-align: center;
     margin: 0 auto;
@@ -23,7 +23,7 @@
   } 
   
   .homepage img{
-    width: cover;
+    width: 100%;
   }
   .foodpage-hero-image{
     background-image: url("foodpageheader.jpg");
