--- a/css1.css
+++ b/css1.css
@@ -8,7 +8,7 @@
   /*Written by Malena*/
 
   .homepage-hero-image{
-    background-image: url(5);
+    background-image: url(conservationarea.jpg);
     background-size: cover;
     height: 60vh;
     text-align: center;
