--- a/css1.css
+++ b/css1.css
@@ -17,22 +17,15 @@
   }
   .foodpage-hero-image{
     background-image: url("foodpageheader.jpg");
-    background-size: cover;
-    height: 50%;
-    text-align: center;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-align-items: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-justify-content: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+   height: 60%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
   }
   .imagegallery-hero-image{
     background-image: url("imagegalleryheader.jpg");
-    height: 60%;
+   height: 60%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
