--- a/css1.css
+++ b/css1.css
@@ -24,7 +24,7 @@
   position: relative;
   }
   .imagegallery-hero-image{
-    background-image: url("imagegalleryheader.jpg");
+    background-image: url("conservationarea.jpg");
    height: 60%;
   background-position: center;
   background-repeat: no-repeat;
