--- a/css1.css
+++ b/css1.css
@@ -25,7 +25,7 @@
   }
   .imagegallery-hero-image{
     background-image: url("conservationarea.jpg");
-   height: 60%;
+   height: auto;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
