--- a/css1.css
+++ b/css1.css
@@ -14,6 +14,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
+  padding-bottom:20%
   }
   .foodpage-hero-image{
     background-image: url("foodpageheader.jpg");
@@ -22,15 +23,16 @@
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
+  padding-bottom:20%
   }
   .imagegallery-hero-image{
-    background-image: url("conservationarea.jpg");
+    background-image: url("imagegalleryheader.jpg");
    height: 60%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
-  padding-bottom:30%
+  padding-bottom:20%
   }
   .hero-text {
     text-align: center;
