--- a/css1.css
+++ b/css1.css
@@ -1,9 +1,24 @@
 .header{
-  color:#E0FFFF
+  color:#E0FFFF;
+  text-align: center;
 }
 .body {
     font-family: Arial, Helvetica, sans-serif;
   }
+
+
+/*Chris - Set background colour*/
+body{
+  background-color: rgb(224, 253, 242)
+}
+/*Chris - Set inner content box for entire page*/
+
+.innerContent{
+  background-color: rgb(255, 255, 255);
+  margin-left: 7%;
+  margin-right: 7%;
+  box-shadow: 0 9px 0px 0px white, 0 -9px 0px 0px white, 12px 0 15px -4px rgba(105, 105, 105, 0.8), -12px 0 15px -4px rgba(105, 105, 105, 0.8);
+}
  /***********************************Headers for all pages*************************/
   /*Written by Malena*/
 
