--- a/css1.css
+++ b/css1.css
@@ -55,7 +55,17 @@ body{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    color: green; 
+    animation: neon 1s ease-in-out infinite alternate; 
+    margin-left: 200px;
   } 
+/* various colour combinations used to create neon effect */
+    @keyframes neon { 
+        from { 
+            text-shadow: 0 0 35px #85FF64, 
+                         0 0 40px #2BBF03, 
+                         0 0 55px #141ae2; 
+         }
   h1.heroimage{
     color: #E0FFFF;
     font-size: 50px;
