--- a/css1.css
+++ b/css1.css
@@ -50,16 +50,16 @@ body{
   padding-bottom:20%
   }
   .hero-text {
-   text-align: center; 
-            line-height: 2; 
-            color: green; 
-            animation: neon 1s ease-in-out infinite alternate; 
-            margin-left: 200px; 
+    text-align: center;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    } 
+  }
+  h1.heroimage{
+    color: #E0FFFF;
+    font-size: 50px;
+  }
   
 /* various colour combinations used to create neon effect */
     @keyframes neon { 
