--- a/css1.css
+++ b/css1.css
@@ -41,7 +41,7 @@ body{
   padding-bottom:20%
   }
   .imagegallery-hero-image{
-    background-image: url("teamheader.jpg");
+    background-image: url("parksheader.jpg");
    height: 60%;
   background-position: center;
   background-repeat: no-repeat;
