--- a/css1.css
+++ b/css1.css
@@ -23,7 +23,7 @@ body{
   /*Written by Malena*/
 
   .homepage-hero-image{
-    background-image: url(conservationarea.jpg);
+    background-image: url(indexheader.jpg);
      height: 60%;
   background-position: center;
   background-repeat: no-repeat;
