--- a/css1.css
+++ b/css1.css
@@ -59,7 +59,7 @@ body{
   h1.heroimage{
     color: #E0FFFF;
     font-size: 50px;
-    text-shadow: 1px 1px 2px white, 0 0 1em rgb(224, 253, 242), 0 0 0.2em black;
+    text-shadow: 1px 1px 2px black, 0 0 1em rgb(224, 253, 242), 0 0 0.2em black;
   }
 /***Hero image code inspired by: https://codepen.io/mrnathan8/pen/KwKdmO and 
 https://css-tricks.com/forums/topic/full-width-header-responsive-image-with-left-right-overflow/ ****/
